feat: add logical operator to list endpoints
