# server/internal/transport/http/user.go
@@ -335,10 +335,11 @@ func listUsersParamsToDomain(params spec.ListUsersParams) domain.UsersPaginatedF
 
 	return domain.UsersPaginatedFilter{
 		PaginatedRequest: paginatedRequestToDomain(
+			(*spec.LogicalOperatorQueryParam)(params.LogicalOperator),
+			domainSort,
+			(*spec.OrderQueryParam)(params.Order),
 			params.Limit,
 			params.Offset,
-			(*spec.OrderQueryParam)(params.Order),
-			domainSort,
 		),
 		Username:  (*domain.Username)(params.Username),
 		FirstName: (*domain.Name)(params.FirstName),
